--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,11 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.App-resourcelist {
+  background-color: rgb(143, 143, 143);
+  height: 150px;
+  padding: 20px;
+  color: rgb(0, 0, 0);
 }
 
 @keyframes App-logo-spin {
